22. Look for 'playControl' action in SlimBrowse response and, if have more than
    2 audio items, use this for add/play all actions.
23. Remove android lock screen and notification controls.
24. Always send 'mixer muting 0' to disable muting, and 'mixer muting 1' to
    enable, as opposed to 'mixer muting toggle'
25. When toggling mute state, check player status 0.5 seconds later.

1.8.9
-----
 1. Work-around add/play of a track from favourited album adding all tracks.
 2. Treat backspace as per esc - which will allow navigating back.
 3. Show icons for custom actions in now playing context menu.
 4. Show hover actions for tracks of multi-disc albums shown as one allbum.
 5. Don't split tracks into discs when showing search results.
 6. When scrolling input fields into view check if field is in a list item and
    if so scroll the item into view.
 7. Make only text area of list subtitle clickable.
 8. Use active item colour for hover of clickable subtitles.
 9. Add $COMPOSER for custom actions.
10. Ensure valid artist, and album, name before showing 'Go to artist' or
    'Go to album' menu entries.
11. Use albumartist for 'Go to artist' (in now-playing) if track has albumartist
    but no artist.
12. Fix editing and deleting of podcasts.
13. When edit, or delete a podcast, pass existing name to API call to ensure
    indexes are correct.
14. Place 'Recently used' at end of podcast list (where it is before sort
    anyway).

1.8.8
-----
1. Use pulsing, instead of spinning, icon for active tasks.
2. If encounter an invalid time when calculating queue duration, just ask LMS.
3. Queue item durations are floating point, so handle correctly.
4. Fix subtoolbar single line alignment.
5. Don't set mixer volume when changing players.
6. Move 'Zap' next to remove actions.
7. Only show 'Zap' if custom skip plugin enabled.
8. Fix broken add/play all.

1.8.7
-----
1. Also set 'caret-color' to active colour when indicating playlist name already
   exists.