@@ -187,6 +187,7 @@
   print("  <script src=\"html/js/main.js?r=$version\"></script>");
   [% END %]
   <!--JS end-->
+  <script src="material/custom.js"></script>
  </body>
 </html>
 
