@@ -36,6 +36,8 @@
 24. Always send 'mixer muting 0' to disable muting, and 'mixer muting 1' to
     enable, as opposed to 'mixer muting toggle'
 25. When toggling mute state, check player status 0.5 seconds later.
+26. Load 'custom.js' if found in prefs-folder/material-skin, to allow custom
+    javascript to be added.
 
 1.8.9
 -----
